# pallet_detection_and_segmentation

./: README.md
pallet_detection_and_segmentation/: CMakeLists.txt  package.xml  requirements.txt  setup.py
pallet_detection_and_segmentation/launch/: detect_and_segment.launch.py  detect_and_segment.launch2.py
pallet_detection_and_segmentation/models/segmentation_model/: config.json  preprocessor_config.json
pallet_detection_and_segmentation/scripts/: detect_and_segment.py  image_publisher.py  video_publisher.py
